force-app/main/default/objects/Identified_Pain_Point__c/Identified_Pain_Point__c.object-meta.xml
<CustomObject>
    <description>Represents a pattern of inefficiency discovered by the BehaviorIQ analysis engine.</description>
    <label>Identified Pain Point</label>
    <nameField>
        <label>Pain Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Identified Pain Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>