force-app/main/default/objects/Identified_Pain_Point__c/fields/Cost_Per_Incident__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Incident__c</fullName>
    <description>Estimated cost per incident for ROI calculation. Sourced from the Behavior Pattern Rule metadata.</description>
    <inlineHelpText>Estimated cost per incident for ROI tracking</inlineHelpText>
    <label>Cost Per Incident</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>