force-app/main/default/objects/Identified_Pain_Point__c/fields/Example_Records__c.field-meta.xml
<CustomField>
    <fullName>Example_Records__c</fullName>
    <label>Example Records</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>