force-app/main/default/objects/Identified_Pain_Point__c/fields/Fixed_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Record_Ids__c</fullName>
    <description>Stores the IDs of records that were fixed by this pain point resolution. Comma-separated format for cumulative tracking across sessions.</description>
    <label>Fixed Record IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>