force-app/main/default/objects/Identified_Pain_Point__c/fields/Last_Detected__c.field-meta.xml
<CustomField>
    <fullName>Last_Detected__c</fullName>
    <label>Last Detected</label>
    <type>DateTime</type>
</CustomField>