force-app/main/default/objects/Identified_Pain_Point__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unique_Key__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Occurrences__c</columns>
    <columns>Impact_Score__c</columns>
    <columns>Cost_Per_Incident__c</columns>
    <columns>Last_Detected__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>